--- a/climate_analysis.ipynb
+++ b/climate_analysis.ipynb
@@ -123,16 +123,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7fd741bcea90>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7f900089ed90>"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -252,7 +252,7 @@
        "max         6.700000"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -264,46 +264,121 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(9)]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# How many stations are available in this dataset?\n"
+    "# How many stations are available in this dataset?\n",
+    "session.query(func.count(Station.station)).all()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('USC00519281', 2772),\n",
+       " ('USC00519397', 2724),\n",
+       " ('USC00513117', 2709),\n",
+       " ('USC00519523', 2669),\n",
+       " ('USC00516128', 2612),\n",
+       " ('USC00514830', 2202),\n",
+       " ('USC00511918', 1979),\n",
+       " ('USC00517948', 1372),\n",
+       " ('USC00518838', 511)]"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# What are the most active stations?\n",
-    "# List the stations and the counts in descending order.\n"
+    "# List the stations and the counts in descending order.\n",
+    "session.query(Measurement.station, func.count(Measurement.station)).\\\n",
+    "group_by(Measurement.station).order_by(func.count(Measurement.station).desc()).all()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(54.0, 85.0, 71.66378066378067)]"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Using the station id from the previous query, calculate the lowest temperature recorded, \n",
-    "# highest temperature recorded, and average temperature most active station?\n"
+    "# highest temperature recorded, and average temperature most active station?\n",
+    "session.query(func.min(Measurement.tobs), func.max(Measurement.tobs), func.avg(Measurement.tobs)).\\\n",
+    "filter(Measurement.station == 'USC00519281').all()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "     tobs\n",
+      "0    77.0\n",
+      "1    77.0\n",
+      "2    80.0\n",
+      "3    80.0\n",
+      "4    75.0\n",
+      "..    ...\n",
+      "347  77.0\n",
+      "348  77.0\n",
+      "349  76.0\n",
+      "350  76.0\n",
+      "351  79.0\n",
+      "\n",
+      "[352 rows x 1 columns]\n"
+     ]
+    }
+   ],
    "source": [
     "# Choose the station with the highest number of temperature observations.\n",
-    "# Query the last 12 months of temperature observation data for this station and plot the results as a histogram\n"
+    "# Query the last 12 months of temperature observation data for this station and plot the results as a histogram\n",
+    "results = session.query(Measurement.tobs).\\\n",
+    "filter(Measurement.station == 'USC00519281').\\\n",
+    "filter(Measurement.date >= prev_year).all()\n",
+    "#print(results)\n",
+    "df = pd.DataFrame(results, columns=['tobs'])\n",
+    "#print(df)\n",
+    "df.plot.hist(bins=12)\n",
+    "plt.tight_layout()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
